# OPSEN-EMTP

./: CMakeLists.txt  Control.cpp  Control.h  Curve.cpp  Curve.h  Devices.cpp  Devices.h  Grid.cpp  Grid.h  LICENSE  README.md  Simulation.cpp  Simulation.h  curve.py  main.cpp
